--- a/src/styles/TopTracks.module.css
+++ b/src/styles/TopTracks.module.css
@@ -23,7 +23,7 @@
   border-radius: 12px;
   color: #cfced3;
   overflow: hidden;
-  background-color: #909090; /* fallback */
+  background-color: #909090;
 }
 
 /* Blurred background image */
@@ -69,16 +69,42 @@
 
 /* Title Styling */
 .topTracksSection h3 {
-  font-family: "Exo 2", sans-serif;
-  /* font-size: 1.3rem; */
-  margin: 0.5rem;
-  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3), 0 0 25px rgba(0, 255, 255, 0.2),
-    0 0 50px rgba(0, 255, 255, 0.2);
-  text-align: center;
-  color: #ffffff;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-}
+    font-size: 2.2rem !important;
+    font-family: "Exo 2", sans-serif;
+    margin: 0.75rem;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3), 0 0 25px rgba(0, 255, 255, 0.2),
+      0 0 50px rgba(0, 255, 255, 0.2);
+    text-align: center;
+    color: #ffffff;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    opacity: 0;
+    animation: fadeIn 1.5s ease-in-out forwards;
+  }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(0);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  .subtitle {
+    font-size: 0.66rem;
+    font-weight: 300;
+    color: #dcd8d8;
+    text-align: center;
+    margin-top: -0.5rem;
+    margin-bottom: 1rem;
+    letter-spacing: 1px;
+    animation: fadeIn 1.5s ease-in-out 0.5s forwards;
+    opacity: 0;
+  }
+  
 
 /* Grid for 2 columns */
 .tracksGrid {
