--- a/src/styles/ArtistSpotlight.module.css
+++ b/src/styles/ArtistSpotlight.module.css
@@ -82,7 +82,7 @@
 }
 
 .artistSpotlightSection h4 {
-  font-size: 3.5rem;
+  font-size: 3rem;
   font-family: "Exo 2", sans-serif;
   text-transform: uppercase;
   letter-spacing: 3px;
@@ -93,7 +93,7 @@
   font-weight: 400;
   animation: fadeIn 1.5s ease-in-out 0.5s forwards;
   opacity: 0;
-  top: 1.5rem;
+  top: 3.5rem;
 }
 
 .artistSpotlightSection p {
@@ -107,7 +107,7 @@
   margin-right: 20px;
   animation: fadeIn 1.5s ease-in-out 0.5s forwards;
   opacity: 0;
-  top: 2rem;
+  top: 4rem;
 }
 
 .artistSpotlightSection::before {
@@ -131,5 +131,32 @@
   margin-top: 0.5rem;
   border: 2px solid rgba(207, 206, 211, 0.4);
   box-shadow: 0 0 15px rgba(255, 255, 255, 0.15);
+  opacity: 1;
+}
+
+.socialLinks {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  gap: 1.5rem;
   opacity: 0;
+  transition: opacity 1.5s ease-in-out;
+  top: 75px;
+}
+
+.socialLinks.visible {
+  opacity: 1;
+}
+
+.socialLinks a {
+  color: #d7d5d5;
+  font-size: 1rem;
+  text-decoration: none;
+  filter: drop-shadow(0 0 2px rgba(152, 160, 160, 0.7));
+  transition: color 0.3s ease;
+}
+
+.socialLinks a:hover {
+  color: #fbfbfb;
+  transform: scale(1.2);
 }
